src/objects/Product_Family_China__c.object
<CustomObject>
    <fields>
        <fullName>Product_Line_Chinese__c</fullName>
        <label>Product Line(Chinese)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_English__c</fullName>
        <label>Product Line(English)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Chinese__c</fullName>
        <label>Product Name(Chinese)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_English__c</fullName>
        <label>Product Name(English)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheen_Chinese__c</fullName>
        <label>Sheen(Chinese)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheen_English__c</fullName>
        <label>Sheen(English)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Product Family(China)</label>
    <listViews>
        <fullName>All_ACTIVE_Products</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Name_English__c</columns>
        <columns>Product_Name_Chinese__c</columns>
        <columns>Product_Line_English__c</columns>
        <columns>Product_Line_Chinese__c</columns>
        <columns>Sheen_English__c</columns>
        <columns>Sheen_Chinese__c</columns>
        <filterScope>Everything</filterScope>
        <label>All ACTIVE Products</label>
        <sharedTo>
            <group>China_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Family(China)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>